@@ -647,14 +647,7 @@ MiniccdIl::init ()
 		return -1;
 	}
 
-	strncpy (ccdType, (char *) &msgr[CCD_CCD_NAME_INDEX], CCD_CCD_NAME_LEN / 2);
-
-	char *top = ccdType;
-
-	while ((isgraph (*top) || isspace (*top))
-		&& top - ccdType < (CCD_CCD_NAME_LEN / 2 - 1))
-		top++;
-	*top = '\0';
+	ccdRealType->setValueCharArr ((char *) &msgr[CCD_CCD_NAME_INDEX]);
 
 	return initChips ();
 }
